Added entities. Added a domain service for a VerifyDebits step

--- a/ProcessExecutor.Tests/ProcessExecutor.Tests.csproj
+++ b/ProcessExecutor.Tests/ProcessExecutor.Tests.csproj
@@ -16,5 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ProcessExecutor.Infra\ProcessExecutor.Infra.csproj" />
     <ProjectReference Include="..\ProcessExecutor.Domain\ProcessExecutor.Domain.csproj" />
+    <ProjectReference Include="..\LegacySystemsIntegration\LegacySystemsIntegration.csproj" />
+    <ProjectReference Include="..\ProcessExecutor.Common\ProcessExecutor.Common.csproj" />
   </ItemGroup>
 </Project>
