--- a/LegacySystemsIntegration/LegacySystemsIntegration.csproj
+++ b/LegacySystemsIntegration/LegacySystemsIntegration.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Class1.cs" />
-  </ItemGroup>
-  <ItemGroup>
+    <Folder Include="Models\" />
     <Folder Include="Interfaces\" />
-    <Folder Include="Processes\" />
-    <Folder Include="Processes\Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProcessExecutor.Common\ProcessExecutor.Common.csproj" />
