--- a/ProcessExecutor.Infra/ProcessExecutor.Infra.csproj
+++ b/ProcessExecutor.Infra/ProcessExecutor.Infra.csproj
@@ -8,9 +8,11 @@
     <Folder Include="Repositories\" />
     <Folder Include="Gateways\" />
     <Folder Include="Services\" />
+    <Folder Include="Services\LegacySystemIntegration\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProcessExecutor.Domain\ProcessExecutor.Domain.csproj" />
+    <ProjectReference Include="..\LegacySystemsIntegration\LegacySystemsIntegration.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
