--- a/ProcessExecutor.Infra/ProcessExecutor.Infra.csproj
+++ b/ProcessExecutor.Infra/ProcessExecutor.Infra.csproj
@@ -9,6 +9,7 @@
     <Folder Include="Gateways\" />
     <Folder Include="Services\" />
     <Folder Include="Services\LegacySystemIntegration\" />
+    <Folder Include="Repositories\Config\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProcessExecutor.Domain\ProcessExecutor.Domain.csproj" />
@@ -16,5 +17,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.6" />
   </ItemGroup>
 </Project>
