--- a/ProcessExecutor.Terminal/ProcessExecutor.Terminal.csproj
+++ b/ProcessExecutor.Terminal/ProcessExecutor.Terminal.csproj
@@ -7,8 +7,17 @@
 
   <ItemGroup>
     <PackageReference Include="FluentScheduler" Version="5.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.2.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Jobs\" />
+    <Folder Include="Services\" />
+    <Folder Include="Services\Interfaces\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProcessExecutor.Domain\ProcessExecutor.Domain.csproj" />
+    <ProjectReference Include="..\ProcessExecutor.Infra\ProcessExecutor.Infra.csproj" />
   </ItemGroup>
 </Project>
